common-applications/test-environment/openeuler-software-package-server/website/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: website
  namespace: openeuler-software-pkg
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: website
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/software-package-website-test:ec2fcf5f946d350ce12487a1605593e9e5a66238
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
